[project]
name = "lang_mcp_tutorial"
version = "0.0.1"
description = "Langgraph + MCP Tutorial"
authors = [
    { name = "Syed Husnain Kahlid", email = "syedhussnaintirmizi@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.17",
    "tavily-python>=0.4.0",
    "langchain-google-genai>=2.0.4",
    "langchain-core>=0.3.39",
    "mcp[cli]>=1.3.0",
    "langchain-mcp-adapters>=0.0.2",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lang_mcp_tutorial"]

[tool.setuptools.package-dir]
"lang_mcp_tutorial" = "src/lang_mcp_tutorial"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
